--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -14,32 +14,27 @@
 # =============================================================================
 
 FROM haaanpeng/byteprofile:cuda10.0pip1.0
-ENV CUDA_VERSION=10.0
-
-ENV USE_CUDA_PATH=/usr/local/cuda:/usr/local/cudnn/lib64 \
+ENV CUDA_VERSION=10.0 \
+    USE_CUDA_PATH=/usr/local/cuda:/usr/local/cudnn/lib64 \
     PATH=/usr/local/cuda/bin:/usr/local/nvidia/bin:${PATH} \
     LD_LIBRARY_PATH=/usr/local/cudnn/lib64:/usr/local/cuda/lib64:/usr/local/lib:/usr/local/nvidia/lib:/usr/local/nvidia/lib64:/usr/local/nccl/lib:$LD_LIBRARY_PATH \
-    LIBRARY_PATH=/usr/local/lib:/usr/local/cudnn/lib64:/usr/local/cuda/lib64:$LIBRARY_PATH 
-
-ENV BYTEPS_BASE_PATH=/usr/local \
+    LIBRARY_PATH=/usr/local/lib:/usr/local/cudnn/lib64:/usr/local/cuda/lib64:$LIBRARY_PATH \
+    BYTEPS_BASE_PATH=/usr/local \
     BYTEPS_PATH=$BYTEPS_BASE_PATH/byteps \
-    BYTEPS_GIT_LINK=https://github.com/bytedance/byteps
-
-# ARG CUDNN_VERSION=7.4.1.5-1+cuda$CUDA_VERSION
-ARG CUDNN_VERSION=7.6.0.64-1+cuda$CUDA_VERSION
+    BYTEPS_GIT_LINK=https://github.com/bytedance/byteps \
+    CUDNN_VERSION=7.6.0.64-1+cuda$CUDA_VERSION
 
 RUN export https_proxy=http://10.8.77.222:8118 http_proxy=http://10.8.77.222:8118 && 、
     apt-get install -y --allow-unauthenticated --allow-downgrades --allow-change-held-packages --no-install-recommends --fix-missing \
         libcudnn7=${CUDNN_VERSION} \
-        libcudnn7-dev=${CUDNN_VERSION} \
+        libcudnn7-dev=${CUDNN_VERSION} 
 
 ############ build server
 # To enable RDMA, add `USE_RDMA=1` to `SERVER_BUILD_OPTS` below.
 ENV SERVER_BUILD_OPTS="USE_BLAS=openblas USE_MKL=1 USE_DIST_KVSTORE=1" \
     BYTEPS_SERVER_MXNET_PATH=/root/incubator-mxnet \
-    MXNET_SERVER_LINK=https://github.com/bytedance/incubator-mxnet
-
-ENV BYTEPS_BASE_PATH=/usr/local \
+    MXNET_SERVER_LINK=https://github.com/bytedance/incubator-mxnet \
+    BYTEPS_BASE_PATH=/usr/local \
     BYTEPS_PATH=$BYTEPS_BASE_PATH/byteps \
     BYTEPS_GIT_LINK=https://github.com/bytedance/byteps
 
@@ -85,8 +80,8 @@ RUN MX_PATH=`python3 -c "import mxnet; path=str(mxnet.__path__); print(path.spli
 RUN update-alternatives --install /usr/bin/gcc gcc $(readlink -f $(which gcc)) 100 && \
     update-alternatives --install /usr/bin/x86_64-linux-gnu-gcc x86_64-linux-gnu-gcc $(readlink -f $(which gcc)) 100 && \
     update-alternatives --install /usr/bin/g++ g++ $(readlink -f $(which g++)) 100 && \
-    update-alternatives --install /usr/bin/x86_64-linux-gnu-g++ x86_64-linux-gnu-g++ $(readlink -f $(which g++)) 100
-RUN update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 200 && \
+    update-alternatives --install /usr/bin/x86_64-linux-gnu-g++ x86_64-linux-gnu-g++ $(readlink -f $(which g++)) 100 && \
+    update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 200 && \
     update-alternatives --install /usr/bin/x86_64-linux-gnu-gcc x86_64-linux-gnu-gcc /usr/bin/gcc-4.9 200 && \
     update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 200 && \
     update-alternatives --install /usr/bin/x86_64-linux-gnu-g++ x86_64-linux-gnu-g++ /usr/bin/g++-4.9 200
