--- a/10.2-cudnn7-devel-ubuntu16.04-mxnet1.5.0/Dockerfile
+++ b/10.2-cudnn7-devel-ubuntu16.04-mxnet1.5.0/Dockerfile
@@ -162,7 +162,7 @@ ENV LD_LIBRARY_PATH=$OLD_LD_LIBRARY_PATH \
     BYTEPS_TRACE_ON=1 \
     BYTEPS_TRACE_END_STEP=30 \
     BYTEPS_TRACE_START_STEP=10 \
-    BYTEPS_TRACE_DIR=${HOME}/traces \
+    BYTEPS_TRACE_DIR=/root/traces \
     MXNET_GPU_WORKER_NTHREADS=1 \
     MXNET_EXEC_BULK_EXEC_TRAIN=0
 
