--- a/10.2-cudnn7-devel-ubuntu16.04-mxnet1.5.0/Dockerfile
+++ b/10.2-cudnn7-devel-ubuntu16.04-mxnet1.5.0/Dockerfile
@@ -75,7 +75,7 @@ RUN python -m pip install --upgrade pip && \
     pip --no-cache-dir install \
         matplotlib \
         numpy==1.15.2 \
-        scipy==1.3.3 \
+        scipy \
         sklearn \
         pandas \
         graphviz==0.9.0 \
